<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Nota del descuento-->
            <TextView
                android:id="@+id/item_nota_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/fondo_verde"
                android:padding="4dp"
                android:text="@string/item_nota_p"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ib_favorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                android:src="@drawable/ic_no_favorito" />

        </RelativeLayout>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenP"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/item_img_producto" />

        <!--Nombre del Producto-->
        <TextView
            android:id="@+id/item_nombre_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/item_nombre_p"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <!--Precio con Descuento del Producto-->
            <TextView
                android:id="@+id/item_precio_p_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_precio_p_dec"
                android:visibility="gone"
                android:layout_marginEnd="12dp"
                android:textSize="16sp"
                android:textColor="@color/md_theme_onPrimaryContainer"/>

            <!--Precio del Producto-->
            <TextView
                android:id="@+id/item_precio_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/item_precio_p"
                android:layout_toEndOf="@+id/item_precio_p_desc"/>


        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_agregar_carrito_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_agregar_carrito_p"
            android:textAllCaps="true"
            app:cornerRadius="8dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>